[package]
name = "nb-from-env"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A convenient way to construct structrual configuration from environment variables"
repository = "https://github.com/wangjun861205/from-env-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
from-env-derive = { version = "*" }
